# PyMemeCacheConsole

./: README.md  pyproject.toml  setup.cfg
pymemcacheconsole/: __init__.py  cli.py  models.py
pymemecacheconsole/: __init__.py  cli.py  client.py  protocol.py
tests/: test_cli.py  test_client.py  test_protocol.py
